removing apikey from sources, as it's an old and unsecure feature
