# api/swagger.yaml
@@ -145,8 +145,4 @@ paths:
       tags:
       - configs
 securityDefinitions:
-  api_key:
-    in: header
-    name: apikey
-    type: apiKey
 swagger: "2.0"
